syntax = "proto3";

option php_namespace = "App\\Protobuff";
option php_metadata_namespace = "App\\GPBMetadata";


message SummaryPb{
    int32 resultCount = 1;
}


